<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="17dp"
        android:src="@drawable/merchant"/>

    <Button
        android:id="@+id/lollipop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginLeft="24dp"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/lollipop" />

    <Button
        android:id="@+id/sword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lollipop"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/sword" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sword"
        android:layout_centerHorizontal="true"
        android:src="@drawable/lollipop" />

    <Button
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lollipop"
        android:layout_below="@+id/sword"
        android:layout_marginLeft="18dp"
        android:text="@string/scroll" />

    <Button
        android:id="@+id/potion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/scroll"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/scroll"
        android:text="@string/potion" />

    <TextView
        android:id="@+id/candies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/potion"
        android:layout_alignLeft="@+id/imageView1" />

    <TextView
        android:id="@+id/merchtalk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/potion" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/back" />

</RelativeLayout>