<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/merchant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/quest"
        android:layout_below="@+id/inventory"
        android:text="@string/merchant" />

    <Button
        android:id="@+id/inventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/merchant"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:text="@string/inventory" />

    <Button
        android:id="@+id/quest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/merchant"
        android:layout_marginLeft="19dp"
        android:text="@string/quest" />

    <TextView
        android:id="@+id/TVTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/quest"
        android:layout_centerVertical="true" />
    


    <Button
        android:id="@+id/eat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TVTimer"
        android:layout_below="@+id/TVTimer"
        android:layout_marginTop="66dp"
        android:text="@string/eat" />

    <TextView
        android:id="@+id/TVeatencandies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eat"
        android:layout_below="@+id/TVTimer"
        android:layout_marginTop="38dp" />

</RelativeLayout>